02-apple-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-deployment
  namespace: demo-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apple
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
        - name: apple-app
          image: hashicorp/http-echo:0.2.3
          args:
            - "-text=🍎 Hello from Apple Service!"
          ports:
            - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: apple-service
  namespace: demo-apps
spec:
  type: ClusterIP
  ports:
    - port: 5678
      targetPort: 5678
  selector:
    app: apple
