03-banana-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-deployment
  namespace: demo-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banana
  template:
    metadata:
      labels:
        app: banana
    spec:
      containers:
        - name: banana-app
          image: hashicorp/http-echo:0.2.3
          args:
            - "-text=🍌 Hello from Banana Service!"
          ports:
            - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: banana-service
  namespace: demo-apps
spec:
  type: ClusterIP
  ports:
    - port: 5678
      targetPort: 5678
  selector:
    app: banana
